Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -6,21 +6,20 @@
     <style>
         * {
             padding: 0;
-            margin: 0; /* También puedes quitar el margen si lo deseas */
+            margin: 0; 
         }
 
         body, html {
-            height: 100%; /* Asegura que el cuerpo y el HTML ocupen toda la ventana */
-            overflow: hidden; /* Evita el scroll en el cuerpo y el HTML */
+            height: 100%; 
+            overflow: hidden; 
         }
         header {
-            display: flex; /* Usa flexbox */
-            justify-content: left; /* Espacio entre el texto y los botones */
-            align-items: center; /* Centra los elementos verticalmente */
-            background-color: #333; /* Cambia el color de fondo a tu preferencia */
-            color: #fff; /* Cambia el color del texto a tu preferencia */
-            padding: 20px 20px; /* Agrega relleno solo en la parte superior e inferior */
-            /* Otros estilos que desees aplicar */
+            display: flex; 
+            justify-content: 
+            align-items: center; 
+            background-color: #333; 
+            color: #fff;
+            padding: 20px 20px; 
             height: 10%;
             width: 100vw;
 
@@ -68,14 +67,14 @@
         }
         button {
             height: 50px;
-            width: 150px; /* Ajusta el ancho según tu preferencia */
+            width: 150px; 
             border: none;
             border-radius: 5px;
-            background-color: #4CAF50; /* Color de fondo verde */
-            color: white; /* Color del texto blanco */
-            margin: 5px; /* Espacio entre los botones */
-            cursor: pointer; /* Cambia el cursor al pasar sobre los botones */
-            transition: background-color 0.3s; /* Transición suave para el cambio de color de fondo */
+            background-color: #4CAF50;
+            color: white; 
+            margin: 5px; 
+            cursor: pointer; 
+            transition: background-color 0.3s; 
         }
 
 
